Style: wrap components, add options buttons There will be added listeners to these buttons in the next commit. Also, fixed some warnings.

--- a/app/scss/_media-screen.scss
+++ b/app/scss/_media-screen.scss
@@ -24,6 +24,10 @@
 	.col-m-10 {width: 83.33%;}
 	.col-m-11 {width: 91.66%;}
 	.col-m-12 {width: 100%;}
+
+	header nav ul li:last-child > a {
+		border-top: 1px solid #000;
+	}
 }
 
 @media screen and (min-width: 1025px) {
