--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -9,6 +9,7 @@ $main-bg-image-alt-color: #fefefe;
 
 // ------------------------------ colors
 $color-links: #0db7b7;
+$color-links-hover: $main-bg-image-alt-color;
 
 // ------------------------------ mixins
 @mixin background-size($bg-size) {
@@ -51,11 +52,11 @@ header {
 				//overflow: hidden;
 				float: left;
 
-				&:nth-last-child(2) {
-					border-right: none;
+				& > a {
+					border-right: $li-delimiter;
 				}
 
-				&:last-child {
+				&:last-child > a {
 					float: right;
 					border-right: none;
 				}
@@ -63,8 +64,6 @@ header {
 				a {
 					height: $main-elements-height;
 					line-height: $main-elements-height;
-					border-top: $li-delimiter;
-					border-right: $li-delimiter;
 					width: 90%;
 					padding: 0 5%;
 					display: block;
@@ -85,7 +84,7 @@ header {
 				.dropdown-content {
 					display: none;
 					position: absolute;
-					background-color: #f9f9f9;
+					background-color: $color-links-hover;
 					box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 
 					a {
@@ -125,6 +124,7 @@ body {
 
 .page-wrapper {
     // sizes and position
+	@extend .col-10;
     margin: 0 auto;
     position: relative;
     // styles and color design
@@ -136,7 +136,7 @@ a {
     text-decoration: none;
 
     &:hover {
-        color: #fefefe;
+        color: $color-links-hover;
         background: $color-links;
     }
 }
